# anansnake

./: .gitignore  CHANGELOG.md  README.md  Snakefile  atac_samples.tsv  config.yaml  pyproject.toml  requirements.yaml  rna_samples.tsv  samples.tsv
anansnake/: Snakefile
anansnake/envs/: ananse.yaml  gimme.yaml
anansnake/rules/: ananse.smk  configuration.smk  deseq2.smk  gimme.smk
anansnake/scripts/: cli.py  maelstrom.py  motif2factors.py
envs/: ananse.yaml  deseq2.yaml  gimme.yaml
example/: GRCz11-TPM.tsv  GRCz11-counts.tsv  README.md  atac_samples.tsv  config.yaml  rna_samples.tsv
rules/: ananse.smk  configuration.smk  deseq2.smk  gimme.smk
scripts/: maelstrom.py  motif2factors.py
